# ChurnGuard

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
api/: app.py  db.py  schemas.py
data/processed/: customers_scored.csv  test.csv  train.csv  y_train.npy
data/raw/: telecom_churn.csv
models/: best_model.pkl  kmeans_segmentation.pkl  logistic_regression.pkl  preprocessing_pipeline.pkl  xgboost.pkl
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb
reports/: hypertuning_results.json  model_comparison.csv  phase1_insights.md  phase2_insights.md
reports/business_report/: phase4_bi_report.md
reports/figures/: 09_shap_force_plot.html
src/: config.py
src/analytics/: bi_report.py  cohort_analysis.py  phase1_eda.py  phase2_feature_engineering.py  segmentation.py  shap_advanced.py  shap_analysis.py
src/data/: make_dataset.py
src/features/: build_features.py  preprocessing_pipeline.py
src/models/: evaluate.py  hyperparameter_tuning.py  shap_evaluate.py  train.py
src/utils/: features.py
